added required fileds to swagger, created new put
